# playground

./: AGENTS.md  README.md  index.html
.github/pages/: index.html.tmpl
.github/scripts/: build-gitdb-web.sh  detect-ios-bootstrap-needed.sh  (+32 more)
artillery/: README.md
ast/: .gitignore  README.md  cmd_kinds.go  cmd_languages.go  cmd_query.go  cmd_rename.go  cmd_rewrite.go  cmd_tree.go  diff.go  future-work.md  go.mod  go.sum  main.go  main_test.go  scripts_test.go  source.go
ast-remote/: .gitignore  README.md  bench-gitdb.json  bench-ko-size.json  bench-remote-k8s-d5.json  bench-remote-k8s-shallow.json  bench-remote-ko.json  bench-remote.json  bench-results.json  go.mod  go.sum  main.go
bubble-level/: README.md  index.html  styles.css
bubble-man-rom/: README.md  audio-engine.js  exact-track-data.js  index.html  music-data.js  package-lock.json  package.json  styles.css
cold-climb/: README.md  index.html
cors-proxy/: Cargo.toml  README.md  wrangler.toml
cors-proxy-demo/: styles.css
cors-proxy/docs/: how-it-works.md
cors-proxy/src/: error.rs  lib.rs  proxy.rs  url_guard.rs  worker_entry.rs
cors-proxy/tests/: integration.rs
crane/: .gitignore  README.md  package-lock.json  package.json
docs/: geeksquad-design.md  ios-testflight-design.md  ios-testflight-setup.md  macos-sparkle-design.md  macos-sparkle-setup.md  nettriage-design.md  node-image-design.md  node-image-implementation-plan.md  node-image-monorepo-roadmap.md  nodejs-image-builder-design.md  ssh-app-platform.md
eink-sim/: README.md  index.html  styles.css
geeksquad/: .gitignore  AGENTS.md  README.md  project.yml
git/: README.md  future-work.md  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  styles.css
git-fuse/: Cargo.toml  README.md  rust-toolchain.toml
git-fuse/benches/: fuse_vs_clone.rs  large_repo.rs
git-fuse/src/: cache.rs  fs.rs  lib.rs  main.rs  remote.rs  source.rs  testutil.rs
git-fuse/tests/: e2e.rs
git-server/: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  rust-toolchain.toml  wrangler.toml
git-server/benches/: filelog.rs  large_repo.rs  pack.rs
git-server/docs/: api.md  auth-and-push-policy.md  design.md  large-repo-migration.md  large-repo-repacking.md  loadtest-scaling.md
git-server/scripts/: bench-remote.sh  e2e.sh  probe-body-limit.sh  worker-build.sh
git-server/src/: blame.rs  cache.rs  diff.rs  fileapi.rs  filter.rs  http.rs  lib.rs  maintenance.rs  memtrack.rs  metrics.rs  object.rs  odb.rs  pktline.rs  protocol.rs  refs.rs  repo.rs  storage.rs  testutil.rs  timefmt.rs  timing.rs  trace.rs  worker_entry.rs
git-server/src/pack/: delta.rs  index.rs  mod.rs  scan.rs  write.rs
git-server/tests/: integration.rs  memory.rs
git-server/tests/common/: mod.rs
gitdb/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go  printer.go  repl.go
gitdb-web/: README.md  index.html  main.js  package.json  playwright.config.js  probe.json  styles.css  worker.js
hello-ios/: README.md  project.yml
hello-macos/: .gitignore  ExportOptions-DeveloperID.plist  Gemfile  HelloMac.entitlements  README.md  project.yml
ios/: .gitignore  AGENTS.md  README.md  project.yml
kanoodle/: index.html  package.json  styles.css
life-lab/: README.md  index.html  package-lock.json
life-print/: Cargo.toml  README.md  rust-toolchain.toml  wrangler.toml
life-print/src/: api.rs  lib.rs  slant.rs  stl.rs  store.rs  worker_entry.rs
life-stl/: .gitignore  Cargo.toml  README.md  generate-examples.sh
life-stl/docs/: browser-app-feasibility.md  design.md  printing-a1mini.md  reverse-and-methuselahs.md
life-stl/examples/: REPORT.md  glider-breakaway.stl  glider-raw.stl  glider-scaffold.stl  glider-tree.stl  gusset-acorn-a1mini.3mf  gusset-acorn.stl  gusset-bheptomino.stl  gusset-bunnies.stl  gusset-diehard.stl  gusset-glider-tower.stl  gusset-lwss.stl  gusset-pi.stl  gusset-rabbits.stl  gusset-rpento.stl  gusset-soup-mid.stl  gusset-thunderbird.stl  random-42-breakaway.stl  random-42-raw.stl  random-42-scaffold.stl  rpento-scaffold.stl  soup-99-breakaway.stl  soup-99-pillars.stl  soup-99-scaffold.stl  soup-99-tree.stl  soup-easy-178.stl  soup-easy-262.stl  soup-easy-299.stl  soup-easy-415.stl  soup-easy-51.stl  soup-easy-552.stl  soup-easy-60.stl  soup-easy-920.stl  soup-easy-944.stl  soup-easy-98.stl  soup-tree-100.stl  soup-tree-101.stl  soup-tree-102.stl  soup-tree-103.stl  soup-tree-104.stl  (+17 more)
life-stl/src/: bambu.rs  bambu_profile_a1mini_pla.json  complexity.rs  config.rs  gusset.rs  lib.rs  life.rs  main.rs  mesh.rs  metrics.rs  physics.rs  removal.rs  reverse.rs  scaffold.rs  search.rs  seed.rs  support.rs  volume.rs  wasm.rs
life-stl/tests/: generate.rs
life-stl/tools/: make_bambu_3mf.py
linkchat/: README.md  index.html  package-lock.json
litestream-tenants/: .gitignore  README.md  bench.go  bench_api.go  bench_test.go  go.mod  go.sum  harness.go  main.go  schema.go  stats.go  stub.go  stub_main.go  stub_test.go  tenant.go
mpeg-player/: README.md  index.html  package-lock.json  package.json  styles.css
mta/: package-lock.json  package.json  styles.css
nes-seq/: README.md  package-lock.json  package.json  styles.css
node-image/: .gitignore  README.md  go.mod  go.sum  main.go
nypd-choppers/: README.md  styles.css
ocidb/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go
pentakis-snub-geodesic/: GAME.md  README.md  generate.py  geodesic.scad  geodesic.stl
population-rays/: .gitignore  README.md  index.html  styles.css
rc-pro-am/: README.md  styles.css
rhomcraft/: .gitignore  styles.css
spotify/: package.json  styles.css
web-push/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  wrangler.toml
web-push-demo/: app.js
web-push/docs/: how-it-works.md
web-push/examples/: genvapid.rs
web-push/src/: api.rs  b64.rs  ece.rs  error.rs  lib.rs  push.rs  sender.rs  store.rs  subscription.rs  vapid.rs  worker_entry.rs
web-push/tests/: integration.rs
webrtc/: README.md  index.html  package.json  styles.css
xeneon-cursor/: .env.example  .gitignore  AGENTS.md  README.md  package.json
(+1212 files in other folders)
