[package]
name = "cors-proxy-worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A self-hostable, SSRF-hardened CORS proxy for Cloudflare Workers, written in Rust"
repository = "https://github.com/imjasonh/playground"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies that build on every target (native + wasm). Keeping the URL
# parsing and request/response filtering here (rather than in the wasm-only
# entry) means the security-critical logic is exercised by native `cargo test`.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# WHATWG-compliant URL parsing. Using a real parser (rather than string
# munging) avoids parser-differential bugs that are a classic SSRF bypass.
url = "2"

# The Cloudflare Workers runtime bindings are wasm-only. Gating them to the
# wasm32 target keeps native `cargo test` free of the JS/wasm-bindgen glue, so
# all business logic stays testable on the host.
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8"
# Used to consume the upstream response as a stream so the size cap can abort
# before the whole body is buffered in memory.
futures = "0.3"
# Deploy pin: worker-build 0.8.x is version-locked with worker 0.8.x and
# bundles wasm-bindgen CLI 0.2.125. The library schema must match that CLI
# exactly — bump this in lock-step with worker-build in wrangler.toml.
wasm-bindgen = "=0.2.125"

[profile.release]
opt-level = "s"
lto = true
# worker-build 0.8.5 + wasm-bindgen 0.2.125 need the wasm `target_features`
# custom section (for `reference-types` / externref catch wrappers).
# `strip = true` (= "symbols") drops that section and fails bindgen with
# "externref table required for catch wrappers" (workers-rs#1014).
strip = "debuginfo"
