[package]
# The Cloudflare Worker itself is named just "git" (see wrangler.toml); the
# crate keeps the directory's name to stay distinct from the `git/` browser
# app elsewhere in this repo.
name = "git-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A git smart-HTTP server for Cloudflare Workers (R2 + Durable Objects), written in Rust"
repository = "https://github.com/imjasonh/playground"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies that build on every target (native + wasm). All of the git
# plumbing (pkt-line, pack parsing/indexing, delta resolution, protocol v2,
# push-time indexes, blame) lives here so the exact same code path is exercised
# by native `cargo test`, by miniflare (wasm), and in production.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SHA-1 for git object ids (pure Rust, wasm-friendly).
sha1 = "0.10"
# Streaming zlib inflate/deflate with the pure-Rust miniz_oxide backend so the
# same compressor runs natively and on wasm32 (no C toolchain).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
# Generator-style async streams for the fetch response path: packs are
# emitted chunk-by-chunk (never fully buffered), which is what keeps clones
# of arbitrarily large repos inside the Workers isolate memory limit.
async-stream = "0.3"

# Native-only: the localhost HTTP harness (`testutil`) shared by integration
# tests and benchmarks. Never compiled into the wasm Worker.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"

# The Cloudflare Workers runtime bindings are wasm-only. Gating them to the
# wasm32 target keeps native `cargo test` free of the JS/wasm-bindgen glue, so
# all business logic stays testable on the host.
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.8"
# Wall clock for request metrics (Date.now); version family is pinned by the
# wasm-bindgen pin below.
js-sys = "0.3"
# The `#[durable_object]` macro expands to code referencing these two crates
# directly, so they must be declared even though `worker` re-exports them.
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
# Deploy pin: worker-build 0.8.x is version-locked with worker 0.8.x and
# bundles wasm-bindgen CLI 0.2.125. The library schema must match that CLI
# exactly — bump this in lock-step with worker-build in scripts/worker-build.sh.
wasm-bindgen = "=0.2.125"

[dev-dependencies]
tempfile = "3"
# Gzip encoding for protocol tests (git clients gzip large POST bodies).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Hand-rolled harnesses rather than criterion (keeps the bench harness free of
# clap / edition constraints).
[[bench]]
name = "pack"
harness = false

# End-to-end large-repo benchmark (real git client + native server) with
# per-phase timing and backend-op counts. `cargo bench --bench large_repo`.
[[bench]]
name = "large_repo"
harness = false

# File-log query microbenchmark: monolithic vs path-range-sharded layouts.
[[bench]]
name = "filelog"
harness = false

[profile.release]
opt-level = "s"
lto = true
# worker-build 0.8.5 + wasm-bindgen 0.2.125 need the wasm `target_features`
# custom section (for `reference-types` / externref catch wrappers).
# `strip = true` (= "symbols") drops that section and fails bindgen with
# "externref table required for catch wrappers" (workers-rs#1014).
strip = "debuginfo"

# Benchmarks want optimized code even in `cargo bench` default profile.
[profile.bench]
opt-level = 3
