[package]
name = "life-stl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate 3D-printable STL models of Conway's Game of Life with time as the Z axis"
repository = "https://github.com/imjasonh/playground"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "life-stl"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Command-line interface (clap). Off for wasm builds to keep the binary slim.
cli = ["dep:clap"]
# Browser bindings for the life-lab app (see ../life-lab).
wasm = ["dep:wasm-bindgen"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
stl_io = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

# Small, fast wasm artifact for the browser app.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Life simulation, meshing, and 3mf export are pure computation, so the
# library also compiles to wasm32-unknown-unknown (for a future browser
# front-end). getrandom needs its `js` backend there.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
